# http_file_server

./: .gitignore  404.html  Cargo.toml  POST.html  README.md  async js implementation.rs  attempt.html  attempt_deep_seek.rs  https requests.txt  index.html  users.txt
.github/workflows/: rust.yml
src/: auth.rs  file_operations.rs  get request.tx  main.rs  pages.rs  preview.rs  security.rs  utils.rs
uploads/: test.txt
