[package]
name = "http_file_server"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr= "2.7.4"
percent-encoding = "2.3.1"
htmlescape = "0.3.1"
delete = "1.0.1"
lazy_static = "1.4.0" # for the mutable global show_folder

zip = "2.2.3"  # For ZIP compression
walkdir = "2.5"  # For recursive directory traversal

encoding = "0.2"
bcrypt = "0.17"
serde = "1.0.228"

